v1.0:

o Fixed v3.newzbin.com's DirectNZB support which was broken as of
  2007-02-18

o Added support for libnotify notifications (patch submitted by Ruben
  Fonseca)

o No longer hiding exceptions; many were previously only shown in the
  debug log file.


v0.11:

o Fixed the error:
  ImportError: cannot import name daemonize
  with Twisted 2.5

o Added the Hellanzb.CATEGORIZE_DEST option. Enabling it saves archives
  into a sub directory of DEST_DIR named after their newzbin.com
  category (when queued using the enqueuenewzbin XMLRPC call); e.g. Apps,
  Movies, Music

o enqueuenewzbin now downloads gzipped newzbin.com NZBs via the new v3
  DirectNZB interface (Thanks DBordello and Thomas Hurst)

o Added support for fillservers (by priority)

o Now requeueing segments to other servers when they fail yDecode CRC
  checks

o Added optional support for converting MacBinary files

o Now properly parsing v3.newzbin.com NZB names

o Fixed the enqueuenewzbin error:
  exceptions.AttributeError: 'module' object has no attribute 'b64encode'
  on Python 2.3

o No longer overwriting pre-existing files during rar extraction

o Fixed handling of NZB files with invalid segment number and bytes
  attributes

o Fixed .zip files in the QUEUE_DIR constantly being rescanned for NZBs

o Fixed a couple issues when antiIdle is disabled, including reconnection
  failures after connections are lost

o antiIdle disabled connections now avoid connecting at startup, and
  disconnect immediately when there is nothing left to download. i.e. they
  only are connected to the server when necessary. antiIdle disabled fill
  servers only connect when they have something to download

o Windows compatibility changes -- hellanzb has been reported to work on
  Windows as of the 0.11 changes (thanks hax)

v0.10:

o Multiple servers are now represented with different colors in the scroller
  output

o Added the ability to run an external handler script on an archive after
  post processing
